2008-02-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_reingold_tilford)
	(igraph_layout_reingold_tilford_circular) : 'mode' and 'rootlevel' 
	 arguments added, 'roots' (instead of 'root') is a vector now.
	 This allows better handling of unconnected graphs.

2008-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/centrality.c (igraph_pagerank) : fixed issue #77

2008-02-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structure_generators.c (igraph_adjlist) : added
	* examples/simple/adjlist.c : added
	
	* src/adjlist.c (igraph_adjlist_size) : added

2008-02-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_shortest_paths_dijkstra) : added

	* src/structural_properties.c (igraph_shortest_paths) : return 
	IGRAPH_INFINITY for unreachable vertices

	* src/heap.c (igraph_indheap_push_index, igraph_indheap_push_with_index) 
	: renamed, it was inconsistent here and in the header

2008-02-15  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/structural_properties.c (igraph_transitiviy_local) : bug fixed

2008-02-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_path_length_hist) : bug fixed

2008-02-10  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/centrality.c (igraph_pagerank) : bugs fixed, handle directed graphs

	* src/structureal_properties.c (igraph_pagerank_old) : bug fixed

2008-02-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/arpack.c (igraph_arpack_dssolve, igraph_arpack_dnsolve)
	* src/error.h (igraph_error_type_t)
	* src/error.c (igraph_i_error_strings) : better ARPACK error codes

	* src/flow.c (igraph_i_maxflow_value_undirected)
	(igraph_maxflow_value, igraph_i_mincut_undirected) : allow capacity
	vector to be NULL

2008-02-04  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/layout.c (igraph_layout_lgl) : added progress meter

2008-01-28  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c : added interface to walktrap