@@ -40,10 +40,16 @@ int main() {
   igraph_vector_init_seq(&y, 1, igraph_vcount(&g));
   SETVANV(&g, "id", &y);
   igraph_vector_destroy(&y);
+
+  SETVAS(&g, "name", 0, "foo");
+  SETVAS(&g, "name", 1, "foobar");
   
   igraph_vector_init_seq(&y, 1, igraph_ecount(&g));
   SETEANV(&g, "id", &y);
   igraph_vector_destroy(&y);
+
+  SETEAS(&g, "name", 0, "FOO");
+  SETEAS(&g, "name", 1, "FOOBAR");
 
   igraph_write_graph_gml(&g, stdout, 0, "");
   igraph_write_graph_graphml(&g, stdout);
